removed fixed class to remove some white space

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -123,7 +123,7 @@ button:hover{
 
 .main-container{
     text-align: center;
-    margin-top: 200px;
+    /* margin-top: 200px; */
     /* color: black; */
     /* background-color: black; */
 }
